--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 921600
 lib_deps = 
 	bblanchon/ArduinoJson@^6.20.1
-	links2004/WebSockets@^2.3.7
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	links2004/WebSockets@2.3.7
